--- a/src/App.css
+++ b/src/App.css
@@ -421,7 +421,7 @@
 }
 .cyber-resume .box-2 {
   grid-column: 16 / span 18;
-  grid-row: 12 / span 16;
+  grid-row: 12 / span 20;
   animation-delay: 3s;
 }
 .cyber-resume .box-3,
@@ -525,6 +525,7 @@
     rgba(2, 83, 34, 0.6) 40%,
     rgba(2, 83, 34, 0) 100%
   );
+  box-shadow: inset 0 0 40px rgba(2, 83, 34, 0.7);
 }
 .cyber-resume .box-2:hover {
   animation: greenLinesScroll 1s ease-in-out both !important;
@@ -534,12 +535,13 @@
   font-family: "Press Start 2P", monospace;
   border: #000000 solid 1px;
   height: 100%;
+  position: relative;
 }
 
 .cyber-resume .summary-section h3 {
   font-size: var(--text-2xl);
   text-align: center;
-  padding: 0;
+  padding: 20px 0 5px 0;
   margin: 0;
 } 
 .cyber-resume .summary-section p {
@@ -549,6 +551,43 @@
   margin: 0;
   line-height: var(--space-6);
 } 
+
+.power-btn {
+  position: absolute;
+  bottom: -30px;
+  right: 0px;
+  margin: 0;
+  padding: 0 4px;
+  border: #000000 solid 2px;
+  border-radius: 3px;
+  background: #262626;
+  color: #02c31fa1;
+  scale: 0.8;
+}
+
+.power-btn:hover {
+  filter: brightness(1.2);
+}
+
+.power-btn:active {
+  filter: brightness(0.8);
+}
+
+.cyber-resume .box-2 .summary-section.powered-off {
+ background: #000000;
+}
+
+.cyber-resume .box-2 .summary-section .summary-content.powered-on {
+  animation: powerOn 0.5s ease forwards !important; 
+}
+
+.cyber-resume .box-2 .summary-section .summary-content.powered-off {
+  animation: powerOff 0.5s ease forwards !important; 
+}
+
+.cyber-resume .box-2 .summary-section.powered-off .power-btn svg {
+  animation: powerButtonSTBFlash 2s ease infinite;
+}
 
 /* ================================================= Summary =================================================*/
 /* ========================================= Projects and Experience =========================================*/
@@ -864,21 +903,30 @@
 /*================================================== Battery ==================================================*/
 /*================================================= Keyframes =================================================*/
 
+@keyframes powerButtonSTBFlash {
+  0% {
+    color: #db0202;
+  }
+  50% {
+    color: #8383833f;
+  }
+  100%{
+    color: #db0202;
+  }
+}
+
 @keyframes powerOn {
   0% {
     opacity: 0;
     transform: scale(0.95);
-    box-shadow: 0 0 50px rgba(0, 255, 0, 0.1);
   }
   60% {
     opacity: 1;
     transform: scale(1.01);
-    box-shadow: 0 0 50px rgba(0, 255, 0, 0.3);
   }
   100% {
     opacity: 1;
     transform: scale(1);
-    box-shadow: 0 0 50px rgba(0, 255, 0, 0);
   }
 }
 @keyframes powerOff {
